[package]
name = "disco_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustcord = "0.2.4"
iced = "0.3"
font-loader = "0.11.0"
lazy_static = "1.4.0"

serde = {version = "1.0.136", features=["derive"] }
serde_json = "1.0.79"
iced_native = "0.4.0"
